css/style1.css
* { box-sizing: border-box; }

body {
  max-width: 960px;
  margin: 50px auto 100px !important;
}

body,
header,
article,
h1, h2, h3, h4, h5, h6,
nav,
ul, li,
img,
p,
section,
footer {
  background: rgba(255,0,0,0.08);
  padding: 15px;
  margin: 10px;
}

ul { list-style: none; }

body > header {
  text-align: center;
}

nav ul li {
  display: inline-block;
}

aside {
  float: left;
  width: 350px;
}

article {
  margin-left:360px;
  margin-bottom: 20px;
}

footer {

  text-align: center;
  clear: both;

}

